src/tests/ci/assignment_2_types_variables/valid/04_pointers_basic.c
int main() {
    int x = 5;
    int* p = &x;
    int y = *p;
    return y;
}
