src/tests/ci/assignment_2_types_variables/invalid_syntax/02_bad_declaration.c
int main() {
    int = 5;
    return 0;
}
